2008-02-12  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Fix another build break; g_atomic_int_set() (part of GLib 2.10)
	  isn't present on all build machines, so use an alternate function.

2008-02-08  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Mono_Unix_UnixSignal_WaitAny() semantic change: return the index
	  into the signals array of the first signaled signal if successful,
	  otherwise return the timeout.

2008-02-07  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Make the signal handler thread-safe, so that it can safely be
	  invoked concurrently from multiple threads.

2008-02-05  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Fix the Win32 build.

2008-01-28  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Provide support functions for Mono.Unix.UnixSignal, which 
	  supports both polling and waiting on signal emission.
	* map.h: Flush (adds UnixSignal-related prototypes).

2008-01-05  Jonathan Pryor  <jpryor@novell.com>

	* map.h, map.c: Flush; add new ST_NOEXEC, ST_REMOUNT, and ST_BIND MountFlags 
	  enumeration values.

2007-12-17  Jonathan Pryor  <jpryor@novell.com>

	* map.h: Flush; add Mono_Posix_Syscall__Utsname, Mono_Posix_Syscall_uname()
	  declarations.
	* Makefile.am: Add sys-utsname.c to the build.
	* sys-utsname.c: Added; binding for uname(2).
	* mph.h: Change definition of _mph_copy_structure_strings() so that the
	  offset array specifies whether the string is a pointer (char*) or inline
	  array (char[]) within the structure.  Necessary because most bound
	  structure string members are pointers, but `struct utsname' uses arrays.
	* fstab.c, pwd.c: Update offset array generation due to above.
	* x-struct-str.c: Update _mph_copy_structure_strings() as above.

2007-11-01  Geoff Norton  <gnorton@novell.com>

	* stdio.c:  Handle Leopards lack of L_cuserid.

2007-10-25  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: Provide errno as a parameter and set errno before calling
	  perror(3), as errno is cleared during P/Invoke.